--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "set_up_project_with_webpack",
   "version": "1.0.0",
   "description": "In this project l build a simple yet powerful Webpack boilerplate, which you can later use as a starting point in your projects.",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/Mhdez221993/set_up_project_with_webpack#readme",
   "devDependencies": {
+    "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2"
   }
